--- a/src/main.css
+++ b/src/main.css
@@ -11,9 +11,16 @@ html {
 body {
   width: 100%;
   min-height: 100vh;
+  padding: 100px 50px;
 
   display: flex;
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
