--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,4 +1,4 @@
-.Card img {
+.memoryCard img {
   object-fit: cover;
   aspect-ratio: 2/3;
   width: 130px;
@@ -9,6 +9,6 @@
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
-.Card img:hover {
+.memoryCard img:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
