--- a/src/views/game-board/GameBoard.css
+++ b/src/views/game-board/GameBoard.css
@@ -1,10 +1,10 @@
-.GameBoard {
+.gameBoard {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.GameBoard__Cards {
+.gameBoard__cards {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
