Refactor GameBoard to externalize cards logic; Add styles to Card component and media queries

--- a/src/views/game-board/GameBoard.css
+++ b/src/views/game-board/GameBoard.css
@@ -4,9 +4,8 @@
   align-items: center;
 }
 
-.gameBoard__cards {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
+@media only screen and (min-width: 768px) {
+  .gameBoard {
+    max-width: 900px;
+  }
 }
