--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,14 +1,36 @@
-.memoryCard img {
+.customCard {
+  aspect-ratio: 1/1;
+  width: 100px;
   object-fit: cover;
-  aspect-ratio: 2/3;
-  width: 130px;
-  margin: 10px;
   border-radius: 10px;
-
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
-.memoryCard img:hover {
+.customCard:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.customCard--visible,
+.customCard--visible:hover {
+  box-shadow: none;
+  transition: none;
+}
+
+.customCard--matched {
+  opacity: 0.6;
+}
+
+@media only screen and (min-width: 600px) {
+  .customCard {
+    aspect-ratio: 3/4;
+    width: 115px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .customCard {
+    aspect-ratio: 2/3;
+    width: 130px;
+  }
 }
