--- a/src/components/logo/Logo.css
+++ b/src/components/logo/Logo.css
@@ -1,9 +1,10 @@
 .logo {
   font-size: 40px;
+  margin-bottom: 60px;
 }
 
 .logo__img {
   aspect-ratio: auto;
   width: 150px;
-  margin: 0 25px 60px 0;
+  margin-right: 25px;
 }
