--- a/src/main.css
+++ b/src/main.css
@@ -4,14 +4,17 @@
   box-sizing: border-box;
 }
 
-html {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 body {
   width: 100%;
   min-height: 100vh;
-  padding: 100px 20px;
+  padding: 0 15px;
+  background-color: #f8f7f2;
 
   display: flex;
   align-items: center;
@@ -19,8 +22,7 @@ body {
   flex-direction: column;
 }
 
-#root {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+@font-face {
+  font-family: 'Concert One';
+  src: url(./assets/ConcertOne-Regular.ttf);
 }
