--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -3,6 +3,8 @@
   width: 100px;
   object-fit: cover;
   border-radius: 10px;
+  cursor: pointer;
+
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
@@ -15,10 +17,12 @@
 .customCard--visible:hover {
   box-shadow: none;
   transition: none;
+  cursor: default;
 }
 
 .customCard--matched {
   opacity: 0.6;
+  cursor: default;
 }
 
 @media only screen and (min-width: 600px) {
