--- a/src/components/logo/Logo.css
+++ b/src/components/logo/Logo.css
@@ -1,10 +1,22 @@
 .logo {
-  font-size: 40px;
-  margin-bottom: 60px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  font-family: 'Concert One', cursive, Arial, sans-serif;
+  font-size: calc(1.7em + 1.7vw);
+  margin-bottom: 50px;
 }
 
 .logo__img {
   aspect-ratio: auto;
-  width: 150px;
-  margin-right: 25px;
+  width: calc(1.7em + 1.7vw);
+  max-width: 140px;
+  margin-right: 10px;
+}
+
+.logo__text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
