Add component for focusable elements

--- a/src/main.css
+++ b/src/main.css
@@ -14,7 +14,7 @@ body {
   width: 100%;
   min-height: 100vh;
   padding: 0 15px;
-  background-color: #f8f7f2;
+  background-color: #fafafa;
 
   display: flex;
   align-items: center;
